updates early September 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -95,6 +95,7 @@ bookmarks, colorlinks, breaklinks,
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
 \emph{Senior Lecturer in Music and Audio Technology}\\
+\emph{Member of Music, Technology and Innovation - Institute for Sonic Creativity (MTI${^2}$)}\\
 Leicester Media School\\
 Faculty of Computing, Engineering and Media\\
 De Montfort University (DMU)\\
@@ -107,15 +108,16 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 
 %%\hrule
 \section*{Current Academic Roles}
----\emph{Senior Lecturer in Music and Audio Technology}, School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
+---\emph{Senior Lecturer in Music and Audio Technology}, Leicester Media School, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
 ---\emph{Poster Co-Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
----\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
+---\emph{Conference Programme Committee Member}. ACM Tangible, Embedded and Embodied Interaction 2021. Salzburg, Austria.\\
 
 %%\hrule
 \section*{Areas of Interest}
-Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
+%Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
+Sound and Music Computing • New Interfaces for Musical Expression • Human-Computer Interaction • Tangible Interaction • Computer-Supported Collaborative Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Generative \& Algorithmic Music • Spatial Audio • Women in Music Tech • STEAM Education • Data Visualization • Creative Computing • Network Music • Web Audio • Audio Electronics • Audio DSP • Creative AI
 
 %\hrule
 \section*{Education}
@@ -187,16 +189,16 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Honors \& Awards}
 \noindent
 
-\subsection*{Research Grants, Honors \& Awards}
+\subsection*{Academic Grants, Honors \& Awards}
 \years{2019b} \textsc{Web Audio Conference 2019 Best Paper Award}. NTNU, Trondheim, Norway.\\
-\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
+%\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
 \years{2018--2019} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
 \years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
 
-\subsection*{Artistic Grants, Honors \& Awards}
+\subsection*{Artistic Honors \& Awards}
 \years{05/2004}\textsc{First prize award Minima Festival}. Gandía, Spain. \\
 Category: Experimental Video. \\
 Project: ``Cosmogonias". \\
@@ -213,7 +215,7 @@ Role: Creator \& Director.
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
-Collaborators: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; Iklectik; PHONOS; L’Ull Cec. \\
+Collaborators: Music, Technology and Innovation - Institute for Sonic Creativity (MTI$^2$), De Montfort University; Leicester Hackspace; IKLECTIK; Phonos; L’Ull Cec. \\
 Total Pound Amount: 10,000 \pounds
 %Candidate’s Share: 
 
@@ -237,9 +239,12 @@ Total Dollar Amount: 2,517,690.00 \$
 
 \subsection*{Fundraiser}
 
-\years{2019}\textsc{Web Audio Conference 2019} \\
+\years{2019b}\textsc{Web Audio Conference 2019} \\
 Role: Conference chair. \\
 Total Fundraised Norwegian Krone Amount: 120,000 NOK (approx. 12,000 \euro)\\[.1cm]
+\years{2019a}\textsc{Internal funding for a COST application} \\
+Role: Project leader. \\
+Total Fundraised Norwegian Krone Amount: 30,000 NOK (approx. 3,000 \euro)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
 Total Fundraised British Pound Amount: 2,000 \textsterling\\[.1cm]
@@ -307,13 +312,13 @@ Candidate’s Share: 50\% (1,500 \euro)
 \noindent
 
 \years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
-\years{2019}Queiroz, M., \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
+\years{2019}Queiroz, M. \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
 \years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. Editor: Eugenio Tuya Feijoo. ISBN 8441516979.
 
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
-\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (in preparation). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". Accepted to appear in \emph{MusTed-antologi 2020}.\\
+\years{2020}Støckert, R., Bergsland, A., \textbf{Xambó, A.} (2020). “The Notion of Presence in a Telematic Cross-Disciplinary Program for Music, Communication and Technology". In  Eiksund, Ø. J., Angelo, E., Knigge, J. eds. Music Technology in Education -- Channeling and Challenging Perspectives. Cappelen Damm Akademisk. pp. 73--93.\\
 \years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: An Interdisciplinary Approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
@@ -321,13 +326,13 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Journal Special Issues}
 \noindent
-\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Web Audio Conference Special Issue. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.
 
 
 \subsection*{Journal Articles}
 \noindent
-{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Submitted to the \emph{Journal of Audio Engineering Society}. for the \emph{Web Audio Conference Special Issue}.}\\
-\years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
+{\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. Submitted to the \emph{Special Issue on Web Audio}. \emph{Journal of Audio Engineering Society}, volume 68, issue TBD.}\\
+\years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \eXambo.brief.CVmph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
 \years{2018a}\textbf{Xambó, A.}, Roma, G., Shah, P., Tsuchiya, T., Freeman, J., Magerko, B. (2018). “Turn-taking and Online Chatting in Co-located and Remote Collaborative Music Live Coding". \emph{Journal of Audio Engineering Society}, 66(4), pp. 253--256.\\
 \years{2017c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2017). “Exploring Social Interaction with a Tangible Music Interface". \emph{Interacting with Computers}, 29(2), pp. 248--270.\\
@@ -339,8 +344,8 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-{\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. Accepted to appear in \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK.}\\
-\years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway.\\
+{\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
+\years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway. pp. 41--47.\\
 \years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 2--7. \emph{Best Paper Award}.\\
 \years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME ’19)}. Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
@@ -353,6 +358,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2017c}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Handwaving: Gesture Recognition for Participatory Mobile Music". In \emph{Proceedings of the Audio Mostly Conference (AM '17)}. London.\\
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\ 
 \years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and Ownership with a Tangible Computational Music Installation for Informal Learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
+\years{2016c} Moore, R., Edwards, D., Freeman, J., Magerko, B., McKlin, T., \textbf{Xambó, A.} (2016). “EarSketch: An Authentic, STEAM-Based Approach to Computing Education". In \emph{Proceedings of the 2016 American Society for Engineering Education Annual Conference \& Expo}. New Orleans, Louisiana.\\
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to Broaden Participation in Computing and Music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 65--73.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
@@ -374,8 +380,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (2018). “Beacon: Exploring Physicality in Digital Performance". In \emph{Proceedings of the Twelfth International Conference on Tangible, Embedded, and Embodied Interaction (TEI '18)}. Stockholm, Sweden. pp. 586--591.\\
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
-\years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
-\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 315--316.\\
+\years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended Abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
+\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 315--316.\\
 \years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
 \years{2014}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an Integrated Methodological Framework for Understanding Embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.
 
@@ -384,7 +390,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \years{2020}Fasciani, S., Jensenius, A.R., Støckert, R., \textbf{Xambó, A.} (2020) ``The MCT Portal: An Infrastructure, a Laboratory and a Pedagogical Tool''. Researchers’ Colloquium on Low Latency Streaming in Music Learning and Teaching. Royal Conservatoire of Scotland, Glasgow, UK.\\
 \years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (2017) “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". 2017 Co-Creation Workshop at the International Conference on Computational Creativity. Atlanta, GA, USA.\\ 
-\years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
+\years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a Taxonomy for Video Analysis on Collaborative Musical Tabletops". In \emph{BCS HCI 2012 Workshop on Video Analysis Techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative Music Interaction on Tabletops: An HCI Approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
 \subsection*{Reports \& Working Papers}
@@ -399,7 +405,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2020} \textsc{Keynote Speaker} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/h9Og-tUk5JQ?t=4712}{[video]}\\ 
+\years{2020} \textsc{Keynote Speaker} (June 24, 2020). “Collaborative/Participatory Music Experiences: A Dialogue Between SMC and HCI". \emph{Sound and Music Computing Conference 2020 (SMC 2020)}. Torino, Italy. \href{https://youtu.be/fWqhhdkVO6o}{[video]}\\ 
 \years{2019d} \textsc{Oral Presenter} (December 5, 2019). “Facilitating Team-Based Programming Learning with Web Audio". \emph{WAC '19}. 
 \emph{NTNU}, Trondheim, Norway.\\
 \years{2019c} \textsc{Oral Presenter} (November 22, 2019). “Research as Practice / Practice as Research: Real-time Algorithmic Music Experiences and Women in Music Technology". \emph{NOTAM}, Oslo, Norway.\\
@@ -462,7 +468,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
-%{\years{2020} \textsc{Poster Presenter} (July X, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. Accepted to appear in \emph{NIME '20}. Birmingham, UK.}\\
+{\years{2020} \textsc{Online Poster Presenter} (July 23, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{NIME '20}. Birmingham, UK.}\\
 \years{2018b} \textsc{Poster Presenter} together with Roma, G. (June 7, 2018). “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". \emph{NIME '18}. Blacksburg, Virginia, USA. \\
 \years{2018a} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
 \years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
@@ -485,6 +491,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Workshops}
 \noindent
 
+\years{2020}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Martin, C., Armitage, J., Granieri, N., Fiebrink, R., Naveda, L. (July 21, 2020). “NIME Publication Ecosystem Workshop". \emph{NIME '20}. Birmingham, UK.\\
 \years{2019c} \textbf{Xambó, A.} (June 20--21, 2019). “Creative Audio Programming for the Web". \emph{Filmuniversität Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies (Module 5 Audiovisual Application Design).\\
 \years{2019b}Jensenius, A.R., McPherson, A., \textbf{Xambó, A.}, Overholt, D., Pellerin, G., Bukvic, I.I., Fiebrink, R., Schramm, R. (June 3, 2019). “Open Research Strategies and Tools in the NIME Community". \emph{NIME '19}. Centro cultural, UFRGS, Porto Alegre, Brazil.\\
 \years{2019a} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
@@ -492,7 +499,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). “Introduction to SuperCollider". \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.\\%[1.2cm]%hack
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). “Tangible Musical Interfaces with SuperCollider". \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.%\\[1.2cm]%hack
 
 \subsection*{Webinars}
 \noindent
@@ -549,13 +556,14 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2020b}\textbf{Xambó, A.} (March 22, 2020). \emph{Crowdsourced Eulerisms}. Eulerroom Equinox 2020. Streaming from Sheffield, UK.\\
-\years{2020a}\textbf{Xambó, A.} (February 28, 2020). \emph{A situated live coding session}. MTI CONCERT celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK\\
-\years{2019}\textbf{Xambó, A.} (January 18, 2019). \emph{Live coding with crowdsourced sounds \& a drum machine}. International Conference on Live Coding, Medialab Prado, Madrid, Spain.\\
-\years{2018d}\textbf{Xambó, A.} (November 24, 2018). \emph{A session on participatory mobile music and live coding using crowdsourced sounds}. NTNU Research Concert. Dokkhuset. Trondheim, Norway.\\
-\years{2018c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
-\years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. \textsc{Imaginary Berlin}. WAC '18. Factory Berlin. Berlin, Germany.\\  
-\years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
+\years{2020c}\textbf{Xambó, A.} (July 17, 2020). ``A Live Coding Exploration of How the Network Sounds''. \emph{Network Music Festival 2020}. Streaming from Sheffield, UK.\\
+\years{2020b}\textbf{Xambó, A.} (March 22, 2020). ``Crowdsourced Eulerisms''. \emph{Eulerroom Equinox 2020}. Streaming from Sheffield, UK.\\
+\years{2020a}\textbf{Xambó, A.} (February 28, 2020). ``A situated live coding session''. \emph{MTI Concert} celebrating 20 years of Music, Technology and Innovation at DMU with current and past staff and PhD alumni. PACE 1, Leicester, UK.\\
+\years{2019}\textbf{Xambó, A.} (January 18, 2019). ``Live coding with crowdsourced sounds \& a drum machine''. \emph{International Conference on Live Coding}, Medialab Prado, Madrid, Spain.\\
+\years{2018d}\textbf{Xambó, A.} (November 24, 2018). ``A session on participatory mobile music and live coding using crowdsourced sounds''. \emph{NTNU Research Concert}. Dokkhuset. Trondheim, Norway.\\
+\years{2018c}\textbf{peterMann.} (September 28, 2018). ``Live coding session''. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
+\years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. ``Imaginary Berlin''. \emph{WAC '18}. Factory Berlin. Berlin, Germany.\\  
+\years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. ``MareNostrum''. \emph{Cube Fest}. Moss Arts Center. Blacksburg, VA, USA.\\
 \years{2017}\textbf{peterMann}. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
 \years{2016b}\textbf{Xambó, A.} (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
 \years{2016a}\textbf{peterMann}. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
@@ -614,7 +622,7 @@ Role: Concept and implementation.\\
 Role: Concept and implementation.\\
 \years{2017--present} WACastMix: \href{http://annaxambo.me/code/WACastMix}{annaxambo.me/code/WACastMix}.\\
 Role: Concept and implementation.\\
-\years{2016--present}MIRLC: \href{https://github.com/axambo/MIRLC}{github.com/axambo/MIRLC}.\\
+\years{2016--2019}MIRLC: \href{https://github.com/axambo/MIRLC}{github.com/axambo/MIRLC}.\\
 Role: Concept and implementation.\\
 \years{2017b} HAP: \href{https://github.com/axambo/HAP}{github.com/axambo/HAP}.\\
 Role: Concept and implementation.\\
@@ -769,21 +777,24 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 Escola Glòries, Barcelona.\\
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 
-\section*{Supervision  \& Mentoring}
+\section*{Supervision}
 \noindent
 
-\years{01/2020--present}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). From this work, we have published at ICLI '20 (see Peer-Reviewed Conference Papers).\\
-\years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
-\years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
-\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.\\
+\subsection*{Master Students}
+\years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
+\years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
+\section*{Mentoring}
+\years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
+\years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other organization members, such as Jyoti Narang.\\
+ 
 \section*{External Examining}
 \noindent
 
-\years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo.\\
-\years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo.\\
+\years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
+\years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
 \years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.\\
 
 \section*{Additional Experience}
@@ -844,7 +855,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
-\years{2020b}\textsc{Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
+\years{2020c}\textsc{Conference Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
+\years{2020b}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
 \years{2020a}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
 \years{2019i--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
 \years{2019h}\textsc{Conference Local Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
@@ -932,7 +944,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Jury Member}
 \noindent
 
-\years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, Universidade Federal do Rio Grande do Sol, Porto Alegre (UFRGS), Brazil.\\
+\years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
+\years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
 \years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
 \years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
@@ -980,7 +993,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 \subsection*{Languages}
 \noindent
 
-Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency, TOEFL iBT: 97/120 in 2009, PhD in the UK, living abroad since 2010 (UK/USA/Norway), Norwegian (basic level, Level 1 completed in 2019), German (basic level, Level 2 completed in 1991), Italian (basic level, Level 1 completed in 1991), French (basic level, self-taught).
+Catalan (native or bilingual proficiency), Spanish (native or bilingual proficiency), English (full professional proficiency, TOEFL iBT: 97/120 in 2009, PhD in the UK, living abroad since 2010 (UK/USA/Norway), Norwegian (basic level, Level 2 completed in 2019), German (basic level, Level 2 completed in 1991), Italian (basic level, Level 1 completed in 1991), French (basic level, self-taught).
 
 \subsection*{Computer Skills}
 \noindent
